# length-log-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml  ci.yml
crates/length-log/: Cargo.toml
crates/length-log-core/: Cargo.toml
crates/length-log-core-impl/: Cargo.toml
crates/length-log-core-impl/src/: services.rs
crates/length-log-core-impl/src/services/: error.rs  polars_data_service.rs  polars_person_service.rs
crates/length-log-core/src/: app.rs  lib.rs  models.rs  services.rs
crates/length-log-core/src/models/: data_point.rs  person.rs
crates/length-log-core/src/services/: data_service.rs  error.rs  impls.rs  person_service.rs
crates/length-log-core/src/services/impls/: log_person_service.rs
crates/length-log-repl/: Cargo.toml
crates/length-log-repl/src/: error.rs  lib.rs  repl.rs
crates/length-log-repl/src/repl/: flags.rs
crates/length-log/src/: main.rs
src/: error.rs  lib.rs  main.rs
src/app/: mod.rs
