[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
# local crates
length-log-core = { path = "./crates/length-log-core" }
length-log-repl = { path = "./crates/length-log-repl" }

# external crates
# polars = { version = "0.38", default-features = false }
rustyline = "10"
# log = "0"
# env_logger = "0"
nom = "7.1"
shlex = "1.3.0"
log = "0.4.21"
env_logger = "0.11.3"
xflags = "0.3.2"
