[package]
name = "length-log-core-impl"
version = "0.1.0"
authors = ["Kristoffer Andersson <kod.kristoff@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# external deps
chrono.workspace = true
log.workspace = true
polars = { workspace = true }

# local deps
length-log-core.workspace = true
