[package]
name = "length-log"
version = "0.1.0"
authors = ["Kristoffer Andersson <kod.kristoff@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories.workspace = true
env_logger.workspace = true
log.workspace = true
miette = { workspace = true, features = ["fancy"] }

# local deps
length-log-core.workspace = true
length-log-core-impl.workspace = true
length-log-repl.workspace = true
